# BurpParamScanner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.trunk/: trunk.yaml
.trunk/configs/: .bandit.yaml  .prettierrc.yaml  .ruff.toml
config/: rule.json
src/: burpExtension.py  burpHelper.py  paramScanner.py
toolkit/: converter.py
